fix: required proof props
